[project]
name = "link-tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "Клим",email = "klim.klushin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "redis (>=6.2.0,<7.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "sentry-sdk (>=2.34.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
